<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textViewObra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/obra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerObra"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewObra"
            app:layout_constraintTop_toBottomOf="@+id/textViewObra" />

        <TextView
            android:id="@+id/textViewNomePeca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nome_peca"
            app:layout_constraintStart_toStartOf="@+id/spinnerObra"
            app:layout_constraintTop_toBottomOf="@+id/spinnerObra" />

        <EditText
            android:id="@+id/editTextNomePeca"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewNomePeca"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomePeca" />

        <RadioGroup
            android:id="@+id/radioGroupTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textViewTipo"
            app:layout_constraintTop_toBottomOf="@+id/textViewTipo">

            <RadioButton
                android:id="@+id/radioButtonViga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viga" />

            <RadioButton
                android:id="@+id/radioButtonPilar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilar" />

            <RadioButton
                android:id="@+id/radioButtonEscada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escada" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tipo"
            app:layout_constraintStart_toStartOf="@+id/editTextNomePeca"
            app:layout_constraintTop_toBottomOf="@+id/editTextId" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="limpar"
            android:text="@string/limpar"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroupTipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioGroupTipo"
            app:layout_constraintTop_toTopOf="@+id/radioGroupTipo" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="213dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:onClick="salvar"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTipo" />

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/id"
            app:layout_constraintStart_toStartOf="@+id/editTextNomePeca"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomePeca" />

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewId"
            app:layout_constraintTop_toBottomOf="@+id/textViewId" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="cancelar"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

